@@ -22,6 +22,7 @@
 	added #line support
 	more f9 Null<T> support for "if" and array declarations
 	more neko.Web.setCookie parameters
+	added "inline" for methods and static vars
 
 2007-10-31: 1.16
 	use _sans font for default flash traces (better Linux support)
